fixed overlap of title and sidebar second on two column pages

--- a/sites/all/themes/pul_development_theme/css/pul-development-theme-alpha-default-narrow.css
+++ b/sites/all/themes/pul_development_theme/css/pul-development-theme-alpha-default-narrow.css
@@ -183,3 +183,11 @@ width:160px;
 .mini-vertical .date-nav-wrapper .date-next {
 	top: -20px;
 }
+
+/*********
+ * Page Title
+ ********/
+
+.sidebar-second #page-title {
+	max-width: 520px;
+}
