--- a/sites/all/themes/pul_development_theme/css/pul-development-theme-alpha-default-normal.css
+++ b/sites/all/themes/pul_development_theme/css/pul-development-theme-alpha-default-normal.css
@@ -154,3 +154,10 @@ margin-top:0;
 	font-size: 1.0em;
 }
 
+/*********
+ * Page Title
+ ********/
+
+.sidebar-second #page-title {
+	max-width: 700px;
+}
